k8s/clusters/lab/apps/adguard/oidc-middleware.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: adguard-oidc-auth
    namespace: adguard-home
spec:
    plugin:
        traefikoidc:
            # Provider configuration
            providerURL: https://auth.jaxon.cloud
            # OAuth credentials
            clientID: a6f4cfca-7627-4fcc-9519-81ce2ecd767c
            clientSecret: ENC[AES256_GCM,data:X7ThlnF7x5jHhcWGH/G8itqnOtuNYeJd+hdxlB1x67o=,iv:m91PZXRUlwE+/44JjFhfKVBi2za4WoqS8PHxh5+uDD8=,tag:M0SGHJCL0CUelTzPA8PRhg==,type:str]
            # Session encryption key
            sessionEncryptionKey: ENC[AES256_GCM,data:9IEtzJDxHicdthLTl75WeIgMRCU88O5aqjEtrK0XjGnqECurw3dLavb4AVw=,iv:e1V3CcRQIPRzLp/Sk3PJLXJ9zTcJJXiwvB3Rpfj3QeQ=,tag:6uDShDeUEWEHWP8JePjayA==,type:str]
            # Callback configuration
            callbackURL: /oauth2/callback
            # Force HTTPS for redirect URIs
            forceHTTPS: true
            # Scopes to request
            scopes:
                - openid
                - profile
                - email
            # Session configuration
            sessionName: _adguard_oauth
            # 24 hours
            sessionValidity: 86400
            # Logging
            logLevel: info
            # Cookie settings (defaults are secure)
            overrideScopes: false
sops:
    age:
        - recipient: age1hhwgd0zzsuqrg7gad42kh547lkgfeqsu03uql375uzslz0vqc37sknuux0
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZblBNVzFRcmwrK01MMWla
[...]
            hdNyjcMtUgwXzh63LN1DDn3UUYplr8mzglMSrrxHHDF3rdZtItpS7w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-11-08T08:14:08Z"
    mac: ENC[AES256_GCM,data:Ds4i1B3iR3nYOD673IreKvxB5A9i3wBRT1YClZdPPGnoDbQa5zbfu7eSPU+tXu0U0/ffdx1VkXvdwdn8ll8bTmxtxhzPz+B2U6v8TdPVYHM0qHoSJm+rWQ1k3vc0309LBKPjIh1xeXZ+P3cGlCgSWIT5dazVw+zk38v+LvYt0Gg=,iv:6Wp72d+yQ11XLFknHuavc+VkpEl9p0hXX0qcHASy7SE=,tag:yqMqk6JhRHBEI0zxYDO3nQ==,type:str]
    encrypted_regex: ^(clientSecret|sessionEncryptionKey)$
    version: 3.10.2
