k8s/clusters/lab/apps/adguard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome:latest
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: https-admin
              containerPort: 3000
              protocol: TCP
            - name: dns-over-tls
              containerPort: 853
              protocol: TCP
            - name: dns-over-quic
              containerPort: 784
              protocol: UDP
          volumeMounts:
            - name: work
              mountPath: /opt/adguardhome/work
            - name: conf
              mountPath: /opt/adguardhome/conf
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: work
          persistentVolumeClaim:
            claimName: adguard-work
        - name: conf
          persistentVolumeClaim:
            claimName: adguard-conf
