k8s/clusters/lab/apps/adguard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  namespace: adguard-home
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.8.54
spec:
  type: LoadBalancer
  selector:
    app: adguard-home
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-over-tls
      port: 853
      targetPort: 853
      protocol: TCP
    - name: dns-over-quic
      port: 784
      targetPort: 784
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-web
  namespace: adguard-home
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
