k8s/clusters/lab/apps/adguard/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-home
  namespace: adguard-home
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dns.jax-lab.dev
    external-dns.alpha.kubernetes.io/target: 192.168.8.50
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dns.jax-lab.dev`)
      kind: Rule
      services:
        - name: adguard-home-web
          port: 80
  tls:
    certResolver: letsencrypt
